# jira_ai_task_log

./: .env.example  .gitignore  README.md  demo_seed.py  pyproject.toml  requirements.txt
docs/: README.md
src/jira_bridge/: __init__.py  __main__.py  cli.py  config.py  core.py  jira_client.py  report.py
src/jira_bridge/watchers/: __init__.py  base.py  claude_hook.py  cli_watcher.py  git_watcher.py
src/jira_bridge/web/: __init__.py  app.py
src/jira_bridge/web/static/: app.js  style.css
src/jira_bridge/web/templates/: dashboard.html
tests/: conftest.py  test_core.py  test_git_watcher.py  test_jira_client.py  test_report_and_hook.py
