[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-ai-bridge"
version = "1.0.0"
description = "Bridge AI coding sessions (Claude Code, AI editors) to JIRA with zero manual logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Interconnected" }]
keywords = ["jira", "automation", "claude", "ai", "worklog", "productivity"]
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
jira-bridge = "jira_bridge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jira_bridge = ["web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
